# cpp-generator-cli

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: ci.yml
src/main/java/se/mwthinker/: Base64Deserializer.java  CMake.java  CMakeBuilder.java  CMakeGenerator.java  ConsoleIO.java  FileSystem.java  GeneratorCli.java  Github.java  RepoCommitContent.java  RepoFileContent.java  ResourceHandler.java  Util.java  VcpkgConfigurationObject.java  VcpkgObject.java  VcpkgObjectFactory.java
src/main/resources/: Test_CMakeLists.cmake  copilot-instructions.md  gitattributes  gitignore  tests.cpp
src/main/resources/empty-template/: CMakeLists.txt  main.cpp  vcpkg.json
src/main/resources/gui-template/: CMakeLists.txt  main.cpp  testwindow.cpp  testwindow.h
src/main/resources/templates/: CMakeLists.ftl  ExternalFetchContent.ftl  LICENSE.ftl  Test_CMakeLists.ftl  ci.ftl
src/test/java/se/mwthinker/: CMakeBuilderTest.java  FileSystemTest.java
